[package]
name = "concisemark"
version = "0.2.0"
edition = "2021"
authors = ["zhq <pwnkeeper@gmail.com>"]
description = "A simplified markdown parsing library"
homepage = "https://github.com/ikey4u/concisemark"
documentation = "https://docs.rs/concisemark/0.2.0/concisemark"
repository = "https://github.com/ikey4u/concisemark"
license = "MIT"
readme = "README.md"
categories = ["parsing", "parser-implementations", "rendering"]
keywords = ["parser", "markdown"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
toml = "0.5.8"
indoc = "1.0"
once_cell = "1.8.0"
gh-emoji = "1.0.6"
anyhow = "1.0.66"
chrono = { version = "0.4.22", features = ["serde"] }
log = "0.4.17"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
katex = { version = "0.4", default-features = false, features = ["wasm-js"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
katex = { version = "0.4" }

[dev-dependencies]
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
